--- a/resources/assets/sass/layout/_recent-works.sass
+++ b/resources/assets/sass/layout/_recent-works.sass
@@ -6,8 +6,8 @@
 		color: $lightGray
 		font-weight: 400
 
-.work-preview:nth-child(2)
-	margin: 0 55px
+.work-preview:nth-child( 3n + 2 )
+	margin: 0 55px 50px
 	transition: margin .3s ease
 
 .recent-works .btn
