--- a/resources/assets/sass/modules/_blog-post-preview.sass
+++ b/resources/assets/sass/modules/_blog-post-preview.sass
@@ -1,4 +1,5 @@
 .blog__post-preview
+	margin-bottom: 50px
 
 	&.appear
 		display: inline-block !important
@@ -50,8 +51,12 @@
 
 		+middle-line( $red )
 
+.blog
+	.btn
+		margin-top: 0
+
 @media (max-width: 1300px)
-	.blog__post-preview:nth-child( 2 )
+	.blog__post-preview:nth-child( 3n + 2 )
 		margin: 0 30px
 		transition: margin .3s ease
 
@@ -59,7 +64,7 @@
 	.blog__post-preview
 		display: none
 
-		&:nth-child( 2n )
+		&:nth-child( 3n + 2 )
 			margin: 50px 0
 
 		&:first-child
@@ -71,7 +76,7 @@
 
 @media (max-width: 700px)
 	.blog .btn
-		margin-top: 50px
+		// margin-top: 50px
 
 @media (max-width: 600px)
 	.blog__post-preview
