--- a/www/css/blog-post.css
+++ b/www/css/blog-post.css
@@ -1,4 +1,15 @@
 @charset "UTF-8";
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+@keyframes fadeIn {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
 .title--hidden {
   position: absolute;
   left: -99999px; }
