--- a/resources/assets/sass/modules/_blog-post-preview.sass
+++ b/resources/assets/sass/modules/_blog-post-preview.sass
@@ -60,7 +60,7 @@
 
 @media (max-width: 1300px)
 	.blog__post-preview:nth-child( 3n + 2 )
-		margin: 0 30px
+		margin: 0 30px 50px
 		transition: margin .3s ease
 
 @media (max-width: 1080px)
