Add sharing buttons

--- a/resources/assets/sass/base/_base.sass
+++ b/resources/assets/sass/base/_base.sass
@@ -18,3 +18,12 @@ hr
 
 ul
 	list-style-type: none
+
+.my-fa-twitter:before
+	content: "\f099"
+
+.my-fa-facebook:before
+	content: "\f09a"
+
+.my-fa-linkedin:before
+	content: "\f0e1"
