--- a/resources/assets/sass/blog-post.sass
+++ b/resources/assets/sass/blog-post.sass
@@ -8,6 +8,7 @@
 @import "modules/btn"
 @import "layout/recent-works"
 @import "modules/post"
+@import "modules/share"
 @import "modules/blog-post-preview"
 @import "modules/work-preview"
 @import "modules/footer"
