--- a/resources/assets/sass/work.sass
+++ b/resources/assets/sass/work.sass
@@ -10,6 +10,7 @@
 @import "layout/recent-works"
 @import "modules/blog-post-preview"
 @import "modules/post"
+@import "modules/share"
 @import "modules/work"
 @import "modules/work-preview"
 @import "modules/footer"
