--- a/www/css/blog-post.css
+++ b/www/css/blog-post.css
@@ -29,6 +29,15 @@ hr {
 ul {
   list-style-type: none; }
 
+.my-fa-twitter:before {
+  content: "\f099"; }
+
+.my-fa-facebook:before {
+  content: "\f09a"; }
+
+.my-fa-linkedin:before {
+  content: "\f0e1"; }
+
 .wrap {
   width: 1200px;
   margin: 0 auto;
@@ -285,6 +294,60 @@ ul {
     .post__content .content__container code {
       font-size: 13px; } }
 
+.share {
+  text-align: center;
+  padding-top: 40px; }
+
+.share-btn {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  margin: 0 5px;
+  background-color: #eee;
+  border-radius: 6px;
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: .4px;
+  color: #fff;
+  transition: box-shadow 0.3s ease;
+  overflow: hidden;
+  position: relative; }
+  .share-btn i {
+    position: absolute;
+    left: 50%;
+    color: #fff !important;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    transition: all 0.3s ease; }
+  .share-btn i:first-child {
+    font-size: 16px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
+    vertical-align: top; }
+  .share-btn i:last-child {
+    top: -50%; }
+  .share-btn:hover i:first-child {
+    top: 150%;
+    transition: all 0.3s ease; }
+  .share-btn:hover i:last-child {
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    transform: translateY(-50%) translateX(-50%);
+    transition: all 0.3s ease; }
+
+.f-share {
+  background-color: #3B5998; }
+
+.t-share {
+  background-color: #4099FF; }
+
+.lkdin-share {
+  background-color: #0077B5; }
+
 .blog__post-preview {
   margin-bottom: 50px; }
   .blog__post-preview:last-of-type {
@@ -300,7 +363,7 @@ ul {
     color: inherit;
     text-decoration: none; }
   .blog__post-preview .post__date {
-    font-size: 11px;
+    font-size: 12px;
     text-transform: uppercase;
     font-family: "Montserrat";
     text-align: center;
@@ -379,10 +442,10 @@ ul {
     margin-right: 0; }
   .work-preview.whitebg .work-preview__heading {
     color: #2e2e2e;
-    font-weight: 900; }
+    font-weight: 700; }
   .work-preview.whitebg .work-preview__date {
     color: #2e2e2e;
-    font-weight: 900;
+    font-weight: 700;
     font-size: 11px;
     font-family: "Montserrat"; }
   .work-preview.appear {
@@ -407,7 +470,7 @@ ul {
   text-decoration: none; }
 
 .work-preview__date {
-  font-family: "Lato";
+  font-family: "Montserrat";
   font-size: 12px;
   color: #fff;
   text-transform: uppercase; }
