--- a/www/css/index.css
+++ b/www/css/index.css
@@ -29,6 +29,15 @@ hr {
 ul {
   list-style-type: none; }
 
+.my-fa-twitter:before {
+  content: "\f099"; }
+
+.my-fa-facebook:before {
+  content: "\f09a"; }
+
+.my-fa-linkedin:before {
+  content: "\f0e1"; }
+
 .wrap {
   width: 1200px;
   margin: 0 auto;
@@ -237,10 +246,10 @@ ul {
     margin-right: 0; }
   .work-preview.whitebg .work-preview__heading {
     color: #2e2e2e;
-    font-weight: 900; }
+    font-weight: 700; }
   .work-preview.whitebg .work-preview__date {
     color: #2e2e2e;
-    font-weight: 900;
+    font-weight: 700;
     font-size: 11px;
     font-family: "Montserrat"; }
   .work-preview.appear {
@@ -265,7 +274,7 @@ ul {
   text-decoration: none; }
 
 .work-preview__date {
-  font-family: "Lato";
+  font-family: "Montserrat";
   font-size: 12px;
   color: #fff;
   text-transform: uppercase; }
@@ -363,7 +372,7 @@ ul {
     color: inherit;
     text-decoration: none; }
   .blog__post-preview .post__date {
-    font-size: 11px;
+    font-size: 12px;
     text-transform: uppercase;
     font-family: "Montserrat";
     text-align: center;
