Fix date font and size

--- a/resources/assets/sass/modules/_work-preview.sass
+++ b/resources/assets/sass/modules/_work-preview.sass
@@ -8,11 +8,11 @@
 	&.whitebg
 		.work-preview__heading
 			color: $darkGray
-			font-weight: 900
+			font-weight: 700
 
 		.work-preview__date
 			color: $darkGray
-			font-weight: 900
+			font-weight: 700
 			font-size: 11px
 			font-family: "Montserrat"
 
@@ -37,7 +37,7 @@
 	text-decoration: none
 
 .work-preview__date
-	font-family: "Lato"
+	font-family: "Montserrat"
 	font-size: 12px
 	color: #fff
 	text-transform: uppercase
