Add contact form functionality

--- a/resources/assets/sass/modules/_contact.sass
+++ b/resources/assets/sass/modules/_contact.sass
@@ -32,6 +32,19 @@
 	margin: 0 55px
 	transition: margin .3s ease
 
+.form-error
+	font-size: 12px
+	font-weight: 700
+	text-transform: uppercase
+	font-family: "Montserrat"
+
+	.error-parenthesis
+		color: $red
+		margin: 0 5px
+
+.field-error
+	border-color: $red !important
+
 label
 	display: block
 	text-align: left
