--- a/resources/assets/sass/modules/_header.sass
+++ b/resources/assets/sass/modules/_header.sass
@@ -57,6 +57,7 @@
 
 .contact-btn
 	color: $lightGray
+	background-color: transparent
 	border: 2px solid $red
 	border-radius: 6px
 	display: inline-block
