--- a/www/css/index.css
+++ b/www/css/index.css
@@ -139,6 +139,7 @@ ul {
 
 .contact-btn {
   color: #f0f0f1;
+  background-color: transparent;
   border: 2px solid #ec6759;
   border-radius: 6px;
   display: inline-block;
