--- a/resources/assets/sass/modules/_header.sass
+++ b/resources/assets/sass/modules/_header.sass
@@ -13,6 +13,9 @@
 .header__logo--image
 	display: block
 	margin: 0 auto 40px
+	background: url("../img/logo.svg")
+	width: 110px
+	height: 71px
 
 .header__logo--text
 	font-size: 14px
