Change hr to ::after

--- a/resources/assets/sass/modules/_blog-post-preview.sass
+++ b/resources/assets/sass/modules/_blog-post-preview.sass
@@ -12,6 +12,13 @@
 		font-size: 13px
 		text-align: center
 
+		&::after
+			content: ""
+			display: block
+			margin: 12px auto 5px
+			border: 1px solid $red
+			width: 100px
+
 	.post__heading__link
 		color: inherit
 		text-decoration: none
