--- a/resources/assets/sass/modules/_contact.sass
+++ b/resources/assets/sass/modules/_contact.sass
@@ -18,6 +18,13 @@
 	text-align: center
 	font-weight: 400
 
+	&::after
+		content: ""
+		display: block
+		margin: 15px auto 0
+		border: 1px solid $red
+		width: 100px
+
 .contact__info__body
 	font-size: 13px
 	line-height: 1.8
