--- a/resources/assets/sass/modules/_work-preview.sass
+++ b/resources/assets/sass/modules/_work-preview.sass
@@ -10,6 +10,8 @@
 			color: $darkGray
 			font-weight: 700
 
+
+
 		.work-preview__date
 			color: $darkGray
 			font-weight: 700
@@ -31,6 +33,13 @@
 	font-size: 13px
 	font-weight: 400
 	color: #fff
+
+	&::after
+		content: ""
+		display: block
+		margin: 12px auto 5px
+		border: 1px solid $red
+		width: 100px
 
 .work-preview__link
 	color: inherit
