--- a/www/css/index.css
+++ b/www/css/index.css
@@ -272,6 +272,12 @@ ul {
   font-size: 13px;
   font-weight: 400;
   color: #fff; }
+  .work-preview__heading::after {
+    content: "";
+    display: block;
+    margin: 12px auto 5px;
+    border: 1px solid #ec6759;
+    width: 100px; }
 
 .work-preview__link {
   color: inherit;
@@ -372,6 +378,12 @@ ul {
   .blog__post-preview .post__heading {
     font-size: 13px;
     text-align: center; }
+    .blog__post-preview .post__heading::after {
+      content: "";
+      display: block;
+      margin: 12px auto 5px;
+      border: 1px solid #ec6759;
+      width: 100px; }
   .blog__post-preview .post__heading__link {
     color: inherit;
     text-decoration: none; }
@@ -466,6 +478,13 @@ ul {
   font-size: 13px;
   text-align: center;
   font-weight: 400; }
+  .contact__info__heading::after,
+  .contact__social__heading::after {
+    content: "";
+    display: block;
+    margin: 15px auto 0;
+    border: 1px solid #ec6759;
+    width: 100px; }
 
 .contact__info__body {
   font-size: 13px;
