Add download button styles and extended markdown

--- a/resources/assets/sass/modules/_btn.sass
+++ b/resources/assets/sass/modules/_btn.sass
@@ -41,3 +41,11 @@
 	transform: rotate(-25deg)
 	background-color: #fff
 	transition: all .4s ease
+
+.download-btn
+	display: block
+
+	text-align: center
+	width: 120px
+	margin: 30px auto 0
+	color: #fff !important
