--- a/www/css/index.css
+++ b/www/css/index.css
@@ -355,6 +355,13 @@ ul {
   background-color: #fff;
   transition: all 0.4s ease; }
 
+.download-btn {
+  display: block;
+  text-align: center;
+  width: 120px;
+  margin: 30px auto 0;
+  color: #fff !important; }
+
 .blog {
   text-align: center;
   background-color: #fff; }
